@@ -8,7 +8,10 @@
 	 <link rel="stylesheet" href="https://mark4pro.github.io/css/main.css" />
 	<script data-ad-client="ca-pub-1281398679549446" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
-	<body>
+	<body style="-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;" onload="StartTimeCheck()">
+	<object width="500" height="500" style="opacity:70%;visibility:hidden;background-color:white;position:absolute;top:0px;left:0px;" id="EventBox" type="text/plain" data="https://mark4pro.github.io/NEWS.txt" border="0" ></object>
+	<button onmousedown="ShowNews()" onmouseup="StopShowingNews()" id="EventButton" style="opacity:50%;width:60px;height:60px;word-wrap:break-word;white-space:normal;background-color:grey;position:absolute;top:0px;left:0px;" type="button">News</button>
+	<script src="https://mark4pro.github.io/MainSiteBackEnd.js"></script>
 	<section id="full" class="wrapper">
 	<h1 align="center">Homeworld Takedown</h1><br>
 	<iframe frameborder="0" src="https://itch.io/embed/624262?linkback=true&amp;border_width=3&amp;bg_color=000000&amp;fg_color=ffffff&amp;link_color=fa5bcb&amp;border_color=2f2f2f" width="556" height="171"><a href="https://mark-4-productions.itch.io/homeworld-takedown">Homeworld Takedown by Mark 4 Productions</a></iframe><br>
