@@ -9,7 +9,10 @@
 	 <link rel="stylesheet" href="https://mark4pro.github.io/css/main.css" />
 		<script data-ad-client="ca-pub-1281398679549446" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
-	<body>
+	<body style="-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;" onload="StartTimeCheck()">
+	<object width="500" height="500" style="opacity:70%;visibility:hidden;background-color:white;position:absolute;top:0px;left:0px;" id="EventBox" type="text/plain" data="https://mark4pro.github.io/NEWS.txt" border="0" ></object>
+	<button onmousedown="ShowNews()" onmouseup="StopShowingNews()" id="EventButton" style="opacity:50%;width:60px;height:60px;word-wrap:break-word;white-space:normal;background-color:grey;position:absolute;top:0px;left:0px;" type="button">News</button>
+	<script src="https://mark4pro.github.io/MainSiteBackEnd.js"></script>
 	<section id="full" class="wrapper">
 	<h1 align="center">SlayTheCube Menu</h1>
 	<br><li><a href="https://mark4pro.github.io/SlayTheCube/stc.html" class="button">SlayTheCube</a></li><br>
