@@ -5,7 +5,7 @@
      href="./icon/stc.ico" />
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
-<link rel="apple-touch-icon" href="https://mark4pro.github.io/SlayTheCube/icon/STC1.png">
+<link rel="apple-touch-icon" href="https://mark4pro.github.io/SlayTheCube/icon/STC1.png>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
 	<title>SLAYTHECUBE REMAKE</title>
@@ -25,38 +25,30 @@ body {
 html {
  position: fixed;
 }
-h1 {
-	color: darkred;
-	text-align: center;
-	left: 20%;
-	right: 20%;
-	top: 53%;
-	position: fixed;
-}
 button{
- width:60px;
- height:60px;
- border-radius: 50px;
+ width:70px;
+ height:70px;
+ border-radius: 100%;
  background-color: darkgray;
  color: white;
  text-align: center;
+ opacity: 50%;
  }
-#Left { position: fixed; visibility: visible; left: 50px; top: 500px; z-index: 200; }
-#Right { position: fixed; visibility: visible; left: 150px; top: 500px; z-index: 200; }
-#Up { position: fixed; visibility: visible; left: 100px; top: 440px; z-index: 200; }
-#Down { position: fixed; visibility: visible; left: 100px; top: 560px; z-index: 200; }
-#Reset { position: fixed; visibility: visible; right: 50px; top: 550px; z-index: 200; }
-#Fire { position: fixed; visibility: visible; right: 50px; top: 460px; z-index: 200; }
-#NextLevel { position: fixed; visibility: visible; right: 120px; top: 505px; z-index: 200; }
+#Left { position: fixed; visibility: visible; left: 50px; bottom: 90px; z-index: 200; }
+#Right { position: fixed; visibility: visible; left: 170px; bottom: 90px; z-index: 200; }
+#Up { position: fixed; visibility: visible; left: 110px; bottom: 150px; z-index: 200; }
+#Down { position: fixed; visibility: visible; left: 110px; bottom: 30px; z-index: 200; }
+#Reset { position: fixed; visibility: visible; right: 50px; bottom: 30px; z-index: 200; }
+#Fire { position: fixed; visibility: visible; right: 50px; bottom: 150px; z-index: 200; }
+#NextLevel { position: fixed; visibility: visible; right: 110px; bottom: 90px; z-index: 200; }
 canvas {
-border:2px solid white;
 background-color: black;
-margin-left: auto;
-margin-right: auto;
+margin: 0px;
 display: block;
-width: 600px;
-left: 20%;
-right: 20%;
+width: 100%;
+height: 100%;
+left: 0px;
+top: 0px;
 position: fixed;
 }
 </style>
@@ -64,7 +56,6 @@ position: fixed;
 <body onload="startGame()">
 <script type="text/javascript" src="./GameEngine/Engine.js"></script>
 	<label class="unselectable">
-<h1 align="center" style="background-color:tomato; border:2px solid darkred;">SLAYTHECUBE REMAKE</h1>
   <div id="Up">
   <button onmousedown="moveup()" onmouseup="clearmove()" ontouchend="clearmove()" ontouchstart="moveup()">UP</button>
   </div>
